# cpp-labs

./: .gitignore  README.md
lab0b/: CMakeLists.txt  classes.cpp  classes.h  main.cpp
lab2/: CMakeLists.txt  IWorker.h  IWorkerMaker.h  Parser.cpp  Parser.h  WorkerFactory.cpp  WorkerFactory.h  WorkerMaker.h  in.txt  main.cpp  workflow.txt
lab2/exceptions/: FileException.h  WorkTypeException.h
lab2/workers/: dump.cpp  dump.h  grep.cpp  grep.h  readfile.cpp  readfile.h  replace.cpp  replace.h  sort.cpp  sort.h  writefile.cpp  writefile.h
